--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,10 @@
 
 <dependency>
   <groupId>org.verapdf</groupId>
-  <artifactId>pdfbox-validation-model</artifactId>
-  <version>1.4.5</version>
+  <artifactId>validation-model</artifactId>
+  <version>1.16.1</version>
+<!--  <version>1.4.5</version> -->
+
 </dependency>
 
 <!-- toto potrebuje VERAPDF -->
