--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,9 @@
 		</dependency>
 
 
-<!-- ORG APACHE PDFBOX-->
+
+
+<!-- ORG APACHE PDFBOX - alternative to VERA, which does not work for pdfs above 1b -->
 <!--
 <dependency>
     <groupId>org.apache.pdfbox</groupId>
@@ -44,7 +46,8 @@
     <version>2.0.20</version>
 </dependency>
 -->
-<!-- kvuli PreflightDocument document = parser.getPreflightDocument(); -->
+
+<!-- PreflightDocument document = parser.getPreflightDocument(); -->
 <!--
 <dependency>
     <groupId>javax.xml.bind</groupId>
@@ -52,31 +55,52 @@
     <version>2.3.1</version>
 </dependency>
 -->
-<!-- VERAPDF -->
+
+
+	<!-- VERAPDF -->
+	<dependency>
+	  <groupId>org.verapdf</groupId>
+	  <artifactId>validation-model</artifactId>
+	  <version>1.16.1</version>
+	</dependency>
+	<dependency> <!-- required by VERAPDF -->
+	    <groupId>org.glassfish.jaxb</groupId>
+	    <artifactId>jaxb-runtime</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
+
+	<!-- LOGGER -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-api</artifactId>
+	    <version>2.7</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.7</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-slf4j-impl</artifactId>
+	    <version>2.7</version>
+	</dependency>
+
 
 <dependency>
-  <groupId>org.verapdf</groupId>
-  <artifactId>validation-model</artifactId>
-  <version>1.16.1</version>
-<!--  <version>1.4.5</version> -->
-
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
 </dependency>
 
-<!-- toto potrebuje VERAPDF -->
 
-<dependency>
-    <groupId>org.glassfish.jaxb</groupId>
-    <artifactId>jaxb-runtime</artifactId>
-    <version>2.3.1</version>
-</dependency>
-
-<!-- TESTY -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+	<!-- TESTS -->
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>4.11</version>
+	      <scope>test</scope>
+	    </dependency>
 
 
 <!--
