--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.3.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>isfg.gre</groupId>
+	<artifactId>pdfvalid</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>pdfvalid</name>
+	<description>Simple microservice providing pdf validation using VERA libs</description>
 
 	<properties>
 		<java.version>1.8</java.version>
