--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.1</version>
-        </dependency
+        </dependency>
         
 	<!-- LOGGER -->
 	<dependency>
