--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,44 @@
 		</dependency>
 
 
+
+
 <!-- ORG APACHE PDFBOX - alternative to VERA, which does not work for pdfs above 1b -->
-<!--
+
+<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/fontbox -->
+
+<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox</artifactId>
+    <version>2.0.21</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>fontbox</artifactId>
+    <version>2.0.21</version>
+</dependency>
+
+        
+ <dependency>
+      <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>xmpbox</artifactId> 
+         <version>2.0.21</version> 
+</dependency>
+
+      <dependency>  <!-- XMPSchemaPDFAId -->
+         <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>jempbox</artifactId> 
+         <version>1.8.11</version> 
+      </dependency>
+
 <dependency>
     <groupId>org.apache.pdfbox</groupId>
     <artifactId>preflight</artifactId>
-    <version>2.0.20</version>
+    <version>2.0.21</version>
 </dependency>
--->
+
 
 <!-- PreflightDocument document = parser.getPreflightDocument(); -->
 <!--
